WEB-9200 : Added class to handle card footers with no text and Added

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -27,7 +27,11 @@
                         {{/if}}
                     </h4>
                 </div>
-                <div class="card-footer">
+                {{#ifCond linkType '===' ""}}
+                    <div class="card-footer rc-no-text">
+                {{else}}
+                    <div class="card-footer">
+                {{/ifCond}}
                     <span class="card-footer-action">
                         <svg class="align-middle s-{{linkType}}">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-{{linkType}}"></use>
