added condtion for ipad pro width

--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -925,6 +925,9 @@
     background-repeat: no-repeat;
     background-position: center center;
     display: inline-block;
+    @media(min-width:$break-sm) and (max-width:$break-lg) { 
+        display: inline;
+    }
 	padding: 10px;
 	line-height:20px;
     &:hover {text-decoration:none;cursor:pointer;} 
