--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -92,6 +92,10 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: initial;
+    //WEB-6696
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      font-size: 16px;
+     }
   }
 
   .empty-filter {
@@ -133,6 +137,10 @@
     border-width: 2px;
     font-weight: bold;
     font-size: initial;
+    //WEB-6696
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      font-size: 16px;
+     }
     padding: 6px;
     cursor: pointer;
     margin-left: -110px;
@@ -183,7 +191,10 @@
     background: white;
     text-transform: uppercase;
     font-size: initial;
-
+    //WEB-6696
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      font-size: 15px;
+     }
     padding-right: 2.0em;
     padding-left: 0.5em;
     -webkit-appearance: none;
