--- a/front-end/Assets/src/css/orion/_orion-carousel.scss
+++ b/front-end/Assets/src/css/orion/_orion-carousel.scss
@@ -9,6 +9,9 @@
             display: inline-block;
             margin:  0 auto;
             padding: 0 30px;
+            @media (max-width: $break-sm){
+                padding: 0 10px;
+            }
         }
         hr{
             border: none;
