--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-gettingstarted/supportcentral-gettingstarted.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-gettingstarted/supportcentral-gettingstarted.html
@@ -25,8 +25,11 @@
                     <h3>3) Explore BMC resources</h3>
                     <!-- Added changes for DXP-1423 by samiksha_anvekar START -->
                 <!-- /*Added changes for WEB-7174 by preety_kumari START */-->
-					<p>Start with the <a href="/support/support-guide-getting-started.html#Register-on-Support-Central" target="_blank">Support Central User's Guide </a> / <a href="http://documents.bmc.com/products/documents/12/67/521267/521267.pdf" target="_blank">PDF </a> <br><br></p>
+                    <!-- /* Added changes for WEB-9597 */-->
+					<p>Start with the <a href="/support/support-guide-getting-started.html#Register-on-Support-Central" target="_blank">Support Central User's Guide </a> / <a href="https://documents.bmc.com/products/documents/12/67/521267/521267.pdf" target="_blank">PDF </a> <br><br></p>
 					<!-- END -->
+                    <!-- /* End changes for WEB-9597 */-->
+                </li>
                     <a href="https://communities.bmc.com/docs/DOC-40484" target="_blank" class="btn learn-more">New Customer Orientation </a>
                 </li>
             </ul>
