WEB-9208 Added ic-view play icon for PDF

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -558,6 +558,9 @@ body.no-scroll{
   .ic_play {
     background-image: url("#{$imagesFolder}ic_play.png");
   }
+  .ic_view {
+    background-image: url("#{$imagesFolder}ic_view.png");
+  }
 }
 
 .text-white {
