--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -1,11 +1,38 @@
 // Customized UI for Resource Center Filters
 .rc-filter-panel-group {
-    background-color: #fff;
-
+    background-color: #fff;    
     .heading-group ul {
       list-style-type: none; /* Remove bullets */
       padding: 0; /* Remove padding */
       margin: 0; /* Remove margins */
+      //WEB-6665
+      background-image: none;
+      &::before{
+        content: '+';
+        padding: 10px;
+        color: #29a5d6;
+        display: inline-block;        
+        font-size: 22px;
+        font-weight: bold;
+        position: absolute;
+        right: 10px;
+        top: 0;
+      }
+      &.rc-arrow-up{
+        background-image: none;
+        &::before{
+          content: "-";
+          right: 14px;
+          top: 0px;
+        }
+      }
+      &.rc-arrow-down{
+        background-image: none;
+        &::before{
+          content: "+";
+        }
+      }    
+
     }
   
     .heading-group li {
