--- a/front-end/Assets/src/css/modules/_webinars.scss
+++ b/front-end/Assets/src/css/modules/_webinars.scss
@@ -70,6 +70,9 @@
             padding-left: 2rem;
         }
     }
+        .orange-tick-bullets{
+            margin-top: 25px;
+        }
     }
     
     .webinar-filters-wrap {   
