--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -924,12 +924,10 @@
     background-image:url(#{$imagesFolder}orion/info.png);
     background-repeat: no-repeat;
     background-position: center center;
-    display: inline-block;
-    @media(min-width:$break-sm) and (max-width:$break-lg) { 
-        display: inline;
-    }
+	display:inline;
 	padding: 10px;
 	line-height:20px;
+	&:before {content:"\00a0";padding-left: 10px;}
     &:hover {text-decoration:none;cursor:pointer;} 
     .Tooltip-window {
       z-index:10;
@@ -948,6 +946,9 @@
       font-size:12px!important;
       font-weight:400;
       line-height:16px;
+		&:before {
+			content:"\00a0";
+		}
       }
       
     &:hover .Tooltip-window {
@@ -964,6 +965,7 @@
             top: 100%;
             left: 50%;
             margin-left: -10px;
+			margin-top: -1px;
             border-width: 10px;
             border-style: solid;
             border-color: #414042 transparent transparent transparent;
@@ -984,20 +986,34 @@
 	    &:hover .Tooltip-window{
 	        left: 90%;
 	        transform: translateX(-13%);
+			@media(max-width:$break-md){
+			left: 80%;
+			}
 	        &:after{
                 margin-left: -7px;
-	            left: 10%;  
+	            left: 8.3%;
+				@media(max-width:$break-md) {
+					margin-left: -7px;
+					left: 6%;
+				}
 	        } 
 	    }
 	}
 	
 	&.tooltip_pointer_right {
         &:hover .Tooltip-window{
-            left: 10%;
+            left: 0%;
             transform: translateX(-87%);
+			@media(max-width:$break-md){
+				left: 20%;
+			}
             &:after{
                 margin-left: -14px;
-                left: 90%;  
+                left: 92.5%;
+				@media(max-width:$break-md){
+					margin-left: -14px;
+					left: 94%;
+				}
             } 
         }
     }
@@ -1007,7 +1023,8 @@
 	        top: 40px;
 	        &:after{
                 transform: rotate(180deg);
-                top: -20px;
+                top: -19px;
+				margin-top: 0;
                 border-width: 10px;
                 border-style: solid;
                 border-color: #414042 transparent transparent transparent;
