--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -512,6 +512,13 @@ body.no-scroll{
     width: 1.0rem;
     height: 1.2rem;
   }
+  .s-demo {
+    background-image: url('#{$imagesFolder}s-play.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 1.0rem;
+    height: 1.2rem;
+  }
   .s-view {
     background-image: url('#{$imagesFolder}s-view.png');
     background-repeat: no-repeat;
@@ -556,6 +563,9 @@ body.no-scroll{
     background-image: url("ic_view-white.png");
   }
   .ic_play {
+    background-image: url("#{$imagesFolder}ic_play.png");
+  }
+  .ic_demo {
     background-image: url("#{$imagesFolder}ic_play.png");
   }
   .ic_view {
