--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-orientation-loggedin/supportcentral-orientation-loggedin.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-orientation-loggedin/supportcentral-orientation-loggedin.html
@@ -4,7 +4,7 @@
         <div align="center" style="margin-top:20px;">
             <h3>Is this your first time using Support Central?</h3>
             <div id="newUser">
-                <a href=${support.customerOrientationUrl} target="_blank" class="btn learn-more">Explore orientation checklist</a>
+                <a href=${support.customerOrientationUrl} target="_blank" class="btn btn-primary learn-more">Explore orientation checklist</a>
                 
             </div>
         </div>
