--- a/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
@@ -4,7 +4,7 @@
             <h2>Community</h2>
             <a class="external-app-link btn btn-primary" [href]="state.widgets.askCommunity" target="_blank">Go to the Community</a>
         </div>
-        <div class="description">{{ state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
+        <div class="description" *ngIf="state.hasUserActivity !== null">{{ state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="communityService.busyConfig">
         <adapt-accordion>
