--- a/front-end/Assets/src/support-central-angular/src/app/tile/tile.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/tile/tile.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <a class="tile-arrow" [routerLink]=[widget.routerLink] (click)="checkExtended($event)">
-      <span *ngIf="!widget.isExtended" class="d-icon-user_star"></span>
+      <span *ngIf="!widget.isExtended" class="psc-icon-personalization"></span>
       <span *ngIf="widget.isExtended" class="d-icon-undo"></span>
     </a>
 </a>
