changes until January 15

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-orientation-nonloggedin/supportcentral-orientation-nonloggedin.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-orientation-nonloggedin/supportcentral-orientation-nonloggedin.html
@@ -4,7 +4,7 @@
             <div class="psc-fs-12">
             	<div>
 	            	<h3>Upgrade Assistance</h3>
-	                BMC assisted Migration Offering<br>
+	                BMC Assisted Migration Offering<br>
 	                <a class="btn btn-primary learn-more" target="_blank" href=${support.amigoProgramUrl}>AMIGO program</a>
             	</div>
             </div>
@@ -18,7 +18,7 @@
             <sly data-sly-test.loggdIn="${!support.isLoggedIn || !support.isNewUser}">
                 <div class="psc-o-checklist psc-fs-12">
 	                 <div>
-	                    <h3>Explore BMC resources</h3>
+	                    <h3>Explore BMC Resources</h3>
 	                    Get familiar with BMC resources<br>
 	                    <a href=${support.customerOrientationUrl} target="_blank" class="btn btn-primary learn-more">New Customer Orientation</a>
                		</div>
