--- a/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
@@ -2,13 +2,13 @@
     <div class="extended-widget-header">
         <div class="top-section">
             <h2>Community</h2>
-            <a class="external-app-link btn btn-primary" [href]="state.widgets.askCommunity" target="_blank">Go to the Community</a>
+            <a class="external-app-link btn btn-primary" [href]="state.widgets.askCommunity" target="_blank" (click)="sendCommunity('Community')">Go to the Community</a>
         </div>
         <div class="description" *ngIf="state.hasUserActivity !== null">{{ state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="communityService.busyConfig">
-        <adapt-accordion>
-            <adapt-accordion-tab *ngFor="let product of communityService.askCommunity, let i = index" [title]="product.productName" [isOpen]="i === 0">
+        <adapt-accordion >
+            <adapt-accordion-tab *ngFor="let product of communityService.askCommunity, let i = index" [title]="product.productName" [isOpen]="i === 0" (open)="sendAccordion(product.productName)">
                 <app-community-product [details]="product.communityDetails" [smartNumber]="product.productBaseSmartNo"></app-community-product>
             </adapt-accordion-tab>
         </adapt-accordion>
