--- a/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
@@ -2,13 +2,13 @@
     <div class="extended-widget-header">
         <div class="top-section">
             <h2>Documentation</h2>
-            <a class="external-app-link btn btn-primary" [href]="state.widgets.docs" target="_blank">Go to the Documentation Center</a>
+            <a class="external-app-link btn btn-primary" [href]="state.widgets.docs" target="_blank" (click)="sendDocumentation('Documentation')">Go to the Documentation Center</a>
         </div>
         <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="docsService.busyConfig">
         <adapt-accordion>
-            <adapt-accordion-tab *ngFor="let doc of docsService.docs, let i = index" [title]="doc.description" [isOpen]="i === 0">
+            <adapt-accordion-tab *ngFor="let doc of docsService.docs, let i = index" [title]="doc.description" [isOpen]="i === 0" (open)="sendAccordion(doc.description)">
                 <app-docs-product [product]="doc"></app-docs-product>
             </adapt-accordion-tab>
         </adapt-accordion>
