--- a/front-end/Assets/src/support-central-angular/src/app/support-questions/support-questions.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/support-questions/support-questions.component.html
@@ -1,10 +1,10 @@
 <div class="extended-widget-container">
     <div class="extended-widget-header">
         <div class="top-section">
-            <h2>Frequently Asked Questions</h2>
+            <h2>Common Support Questions</h2>
             <a class="external-app-link btn btn-primary" [href]="state.widgets.supportQuestionUrl" target="_blank">Ask the Community</a>
         </div>
-        <div class="description">FAQ about support central</div>
+        <div class="description">Frequently asked questions</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="questionsService.busyConfig">
         <app-question *ngFor="let question of questionsChunk" [question]="question"></app-question>
