services text change DSCE - 6974

--- a/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
@@ -12,7 +12,7 @@
                 <img src="/content/dam/bmc/support/bmc-support-model.png">
             </div>
             <div class="center">
-                <h2>Upgrade to a proactive support model</h2>
+                <h2>Upgrade to an enhanced support model</h2>
             </div>
         </a>
         <a class="sac-link" target="_blank" href="https://www.bmc.com/education/courses/find-courses.html#filter/\{%22type%22:%22edu-specific-types-177151087%22}">
@@ -20,7 +20,7 @@
                 <img src="/content/dam/bmc/support/education.png">
             </div>
             <div class="center">
-               <h2>Become BMC Certified</h2>
+               <h2>Get BMC certified</h2>
             </div>
         </a>
     </div>
