--- a/front-end/Assets/src/css/orion/_orion-Secondary-Nav.scss
+++ b/front-end/Assets/src/css/orion/_orion-Secondary-Nav.scss
@@ -77,7 +77,7 @@
             position: relative;
             margin: 0;
                 a,
-                a:visited, a:focus {
+                a:visited, a:focus, .dropdown-link {
                     display: block;
                     padding: 13px 15px;
                     background: $nav-background;
@@ -85,6 +85,7 @@
                     text-decoration: none;
                     outline: none; 
                     font-size: 16px;
+                    cursor: pointer;
                     @media(min-width: $break-md){                                            
                         padding: 13px 10px;
                     }   
@@ -92,7 +93,7 @@
                         font-size: 18px;                         
                         padding: 13px 15px;
                     }               
-                    &:not(:only-child):after {
+                    &:not(:only-child):after, .dropdown-link:after {
                         display: inline-block;
                         padding: 0 4px;
                         content: '';
@@ -139,7 +140,7 @@
                                       
                 } 
                 &.activePage{
-                    a{
+                    a, .dropdown-link{
 					    color:#ffffff;                
                         &:before{
                             @media(min-width: $break-md){                           
@@ -173,7 +174,7 @@
                         color: #fff;
                         outline: none;
                     }
-                    &:not(:only-child):after {
+                    &:not(:only-child):after, .dropdown-link:after {
                         transform: rotate(180deg);                       
                         transition: 0.4s linear;
                     }
@@ -184,7 +185,7 @@
                 ul li {
                     min-width: 190px;
                     position: relative;
-                    a, a:focus {
+                    a, a:focus, .dropdown-link {
                         line-height: 20px;
                         font-size: 16px !important;
                         padding: 12px 30px;
@@ -270,7 +271,7 @@
                 padding-top: 20px;
                 li {
                     float: none;
-                    a, a:focus {
+                    a, a:focus, .dropdown-link {
                     padding: 15px 0;
                     line-height: 20px;
                     }
