--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-dashboard/supportcentral-dashboard.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-dashboard/supportcentral-dashboard.html
@@ -44,3 +44,4 @@
 <script src="/etc/clientlibs/bmc/dashboard/js/polyfills-es5.js" nomodule defer></script>
 <script src="/etc/clientlibs/bmc/dashboard/js/polyfills.js" defer></script>
 <script src="/etc/clientlibs/bmc/dashboard/js/main.js" defer></script>
+<script src="/etc/clientlibs/bmc/dashboard/js/GAnalytics.js" defer></script>
