Replaced availability links for login logout

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-accountinfo-personalised/supportcentral-accountinfo-personalised.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-accountinfo-personalised/supportcentral-accountinfo-personalised.html
@@ -13,10 +13,10 @@ data-sly-use.support="com.bmc.components.SupportCentral">
                 <li class="action"><a href="/available/manage-support-ids.html">Manage Support IDs</a></li>
                 <!--/* WEB-3150 Update header for Support pages END */-->
                 <li class="action"><a href="/available/edit-profile.html?c=n">Edit Profile</a></li>
-                <li class="action"><a href="/available/redesign-ssologout.html">Logout</a></li>
+                <li class="action"><a href="/available/supportlogout.html">Logout</a></li>
                 </sly>
                 <sly data-sly-test="${!loggedIn}">
-                <li class="action"><a href="/available/redesign-support-login.html">Login</a></li>
+                <li class="action"><a href="/available/supportlogin.html">Login</a></li>
                 <li class="action"><a href="/available/register-now.html?c=n">Register</a></li>
                 </sly>
                 <li class="action"><a class="alerts icon-caution js-fancyDialog" href="#">Alerts</a></li>
