Changes for DSCE-6821

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/support-news-carousel/support-news-carousel.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/support-news-carousel/support-news-carousel.html
@@ -1,4 +1,5 @@
 <div class="container psc-news">
+	<h1 class="psc-section-heading">Support news</h1>
     <div class="left-news-arrow">
       <span class="d-icon-angle_left"></span>
     </div>
