--- a/front-end/Assets/src/support-central-angular/src/styles.scss
+++ b/front-end/Assets/src/support-central-angular/src/styles.scss
@@ -22,20 +22,76 @@
   display: inline-block;
 }
 
-.psc-icon-compatibility_modeler:before {
+.psc-icon-compatibility_modeler_adapt:before {
   content: "\25d8";
 }
 
-.psc-icon-az_listing:before {
+.psc-icon-az_listing_adapt:before {
   content: "\2955";
 }
 
-.psc-icon-how_to_videos:before {
+.psc-icon-how_to_videos_adapt:before {
   content: "\25a2";
 }
 
 .psc-icon-personalization:before {
   content: "\2b94";
+}
+
+.psc-icon-case_management:before {
+  content: "\1f4bc";
+}
+
+.psc-icon-upgrade_assisstance:before {
+  content: "\2912";
+}
+
+.psc-icon-community:before {
+  content: "\1f465";
+}
+
+.psc-icon-user_guide:before {
+  content: "\1f4c3";
+}
+
+.psc-icon-explore_resources:before {
+  content: "\1f5a7";
+}
+
+.psc-icon-downloads:before {
+  content: "\2913";
+}
+
+.psc-icon-faq:before {
+  content: "\1f5ea";
+}
+
+.psc-icon-services_consulting:before {
+  content: "\260a";
+}
+
+.psc-icon-how_to_videos:before {
+  content: "\1f4fd";
+}
+
+.psc-icon-product_catalog:before {
+  content: "\2939";
+}
+
+.psc-icon-product_compatibility:before {
+  content: "\2904";
+}
+
+.psc-icon-training_cartification:before {
+  content: "\2964";
+}
+
+.psc-icon-product_support:before {
+  content: "\1f6e0";
+}
+
+.psc-icon-documentation:before {
+  content: "\1f5b9";
 }
 
 html body {
