--- a/front-end/Assets/src/support-central-angular/src/app/app.component.scss
+++ b/front-end/Assets/src/support-central-angular/src/app/app.component.scss
@@ -29,6 +29,9 @@ adapt-select {
                     margin: 30px 0px;
                 }
                 & ::ng-deep {
+                    .tile-right {
+                        background-color: white;
+                    }
                     .tile-right span {
                         color: #4E5154;
                     }
@@ -44,12 +47,11 @@ adapt-select {
                 margin-top: 30px;
             }
             &.extended ::ng-deep {
-                .tile-left {
+                .tile-right {
                     background-color: #f86e00;
-                    width:3%;
                 }
                 .tile-right span {
-                    color:  #f86e00;
+                    color:  white;
                 }
             }
             &:last-child {
@@ -116,11 +118,11 @@ adapt-select {
                     margin-top: 30px;
                 }
                 &.extended ::ng-deep {
-                    .tile-left {
+                    .tile-right {
                         background-color: #f86e00;
                     }
                     .tile-right span {
-                        color:  #f86e00;
+                        color:  white;
                     }
                 }
                
