icons for DSCE-6821 updated Ser & Con; Prd Comp;

--- a/front-end/Assets/src/support-central-angular/src/styles.scss
+++ b/front-end/Assets/src/support-central-angular/src/styles.scss
@@ -67,7 +67,7 @@
 }
 
 .psc-icon-services_consulting:before {
-  content: "\260a";
+  content: "\2b2d";
 }
 
 .psc-icon-how_to_videos:before {
@@ -79,7 +79,7 @@
 }
 
 .psc-icon-product_compatibility:before {
-  content: "\2904";
+  content: "\25f1";
 }
 
 .psc-icon-training_cartification:before {
