--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -3,9 +3,9 @@
         {{#each items}}
         <div class="rc-card-col">
             {{#ifCond linkType '===' "play"}}
-            <a class="rc-card-modal-youtube-video-player" href="{{assetLink}}" target="_blank" {{{analyticsAttributes}}}>
+            <a class="rc-card-modal-youtube-video-player" href="{{assetLink}}" target="_self" {{{analyticsAttributes}}}>
                 {{else}}
-                <a href="{{assetLink}}" target="_blank" {{{analyticsAttributes}}}>
+                <a href="{{assetLink}}" target="_self" {{{analyticsAttributes}}}>
                     {{/ifCond}}
                     <div class="simple-card bg-white">
                         <!-- WEB-6793 Added new fields for RC Cards START -->
