--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -17,12 +17,11 @@
 			<!--/*  Iterate through the cards for the multifield and fetch page properties  */-->
 			<sly data-sly-list.card="${productSet.resourceSectionCards}">
 				<div class="rc-card-col">
-
-					<sly data-sly-test="${productSet.contentType == 'play'}">
+					<sly data-sly-test="${card.contentType == 'play'}">
 						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 						<sly data-sly-test.anchorCSS="rc-card-modal-youtube-video-player"/>
 					</sly>
-					<sly data-sly-test="${productSet.contentType != 'play'}">
+					<sly data-sly-test="${card.contentType != 'play'}">
 						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 						<sly data-sly-test.anchorCSS=""/>
 					</sly>
@@ -30,7 +29,7 @@
 						<div class="simple-card bg-white">
 							<div class="card-header">
 								<h4></h4>
-								<div class="card-icon ic_${productSet.contentType}" alt="" border="0"></div>
+								<div class="card-icon ic_${card.contentType}" alt="" border="0"></div>
 							</div>
 							<div class="card-content">
 								<hr/>
@@ -39,12 +38,12 @@
 							</div>
 							<div class="card-footer">
 								<span class="card-footer-action">
-									<svg class="align-middle s-${productSet.contentType}">
+									<svg class="align-middle s-${card.contentType}">
 										<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${productSet.contentType}"></use>
 									</svg>
-									${productSet.contentType == 'play' ? 'Play' : '' @ i18n}
-									${productSet.contentType == 'view' ? 'View' : '' @ i18n}
-									${productSet.contentType == 'start' ? 'Start' : '' @ i18n}
+									${card.contentType == 'play' ? 'Play' : '' @ i18n}
+									${card.contentType == 'view' ? 'View' : '' @ i18n}
+									${card.contentType == 'start' ? 'Start' : '' @ i18n}
 								</span>
 							</div>
 						</div>
@@ -55,5 +54,5 @@
 	</div>
      <p data-sly-test="${properties.ctaText && properties.ctaPath}" class="text-center">
         <a class="btn ${properties.cssClass}" href="${properties.ctaPath}">${properties.ctaText @ context='unsafe'}</a>
-    </p>
+     </p>
 </section>
