--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -872,3 +872,8 @@ $bg-forrester-green: #16563F;
 .rc-no-text {
   max-height: 43px;
 } 
+#rc-featured-card {
+  display: none;
+  padding-top: 15px;
+  padding-right: 20px;
+}
